force-app/main/default/objects/IRAD__c/IRAD__c.object-meta.xml
<CustomObject>
    <label>IRAD</label>
    <nameField>
        <displayFormat>IRAD-{0000}</displayFormat>
        <label>IRAD Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>IRADS</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>