force-app/main/default/objects/IRAD__c/fields/Applicable_To__c.field-meta.xml
<CustomField>
    <fullName>Applicable_To__c</fullName>
    <label>Applicable To</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UHC</fullName>
            </value>
            <value>
                <fullName>Surest</fullName>
            </value>
            <value>
                <fullName>UHC/Surest</fullName>
            </value>
            <value>
                <fullName>Dual</fullName>
                <isActive>false</isActive>
                <label>Dual</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>