force-app/main/default/objects/IRAD__c/fields/Category__c.field-meta.xml
<CustomField>
    <fullName>Category__c</fullName>
    <label>Category</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Account Structure</fullName>
            </value>
            <value>
                <fullName>ACIS</fullName>
            </value>
            <value>
                <fullName>Administration</fullName>
            </value>
            <value>
                <fullName>Advocacy</fullName>
            </value>
            <value>
                <fullName>ASA</fullName>
            </value>
            <value>
                <fullName>Audit</fullName>
            </value>
            <value>
                <fullName>Banking</fullName>
            </value>
            <value>
                <fullName>Benefit Design</fullName>
            </value>
            <value>
                <fullName>Billing</fullName>
            </value>
            <value>
                <fullName>Biometrics</fullName>
            </value>
            <value>
                <fullName>CERA</fullName>
            </value>
            <value>
                <fullName>Claim</fullName>
            </value>
            <value>
                <fullName>COBRA</fullName>
            </value>
            <value>
                <fullName>Commissions</fullName>
            </value>
            <value>
                <fullName>Communication</fullName>
            </value>
            <value>
                <fullName>CSP/GSP</fullName>
            </value>
            <value>
                <fullName>Data Feeds</fullName>
            </value>
            <value>
                <fullName>Dental</fullName>
            </value>
            <value>
                <fullName>EAP</fullName>
            </value>
            <value>
                <fullName>Eligibility</fullName>
            </value>
            <value>
                <fullName>eServices</fullName>
            </value>
            <value>
                <fullName>External Vendors</fullName>
            </value>
            <value>
                <fullName>Financial Protection</fullName>
            </value>
            <value>
                <fullName>Flexwork</fullName>
            </value>
            <value>
                <fullName>FSA</fullName>
            </value>
            <value>
                <fullName>Harvard Pilgrim</fullName>
            </value>
            <value>
                <fullName>Health Care Spending Card</fullName>
            </value>
            <value>
                <fullName>Health Statements/EOB</fullName>
            </value>
            <value>
                <fullName>HIA</fullName>
            </value>
            <value>
                <fullName>History Conversion</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>