force-app/main/default/objects/IRAD__c/fields/Date_Reported__c.field-meta.xml
<CustomField>
    <fullName>Date_Reported__c</fullName>
    <defaultValue>Today()</defaultValue>
    <encryptionScheme>None</encryptionScheme>
    <label>Date Reported</label>
    <type>Date</type>
</CustomField>