force-app/main/default/objects/IRAD__c/fields/Internal_External__c.field-meta.xml
<CustomField>
    <fullName>Internal_External__c</fullName>
    <label>Internal/External</label>
    <required>true</required>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Internal</fullName>
            </value>
            <value>
                <fullName>External</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>