force-app/main/default/objects/IRAD__c/fields/Project__c.field-meta.xml
<CustomField>
    <fullName>Project__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Project</label>
    <referenceTo>Project_Template__c</referenceTo>
    <relationshipLabel>IRADs</relationshipLabel>
    <relationshipName>IRADs</relationshipName>
    <type>Lookup</type>
</CustomField>