force-app/main/default/objects/IRAD__c/fields/Resolution_Plan__c.field-meta.xml
<CustomField>
    <fullName>Resolution_Plan__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Resolution Plan</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>