force-app/main/default/objects/IRAD__c/fields/Responsible_Person__c.field-meta.xml
<CustomField>
    <fullName>Responsible_Person__c</fullName>
    <encryptionScheme>None</encryptionScheme>
    <label>Responsible Person</label>
    <length>200</length>
    <type>Text</type>
</CustomField>