force-app/main/default/objects/IRAD__c/validationRules/Resolution_validation_rule.validationRule-meta.xml
<ValidationRule>
    <fullName>Resolution_validation_rule</fullName>
    <active>true</active>
    <errorConditionFormula>(ISNEW() &amp;&amp; ISPICKVAL(Status__c, &apos;Closed&apos;) &amp;&amp; ISBLANK(Resolution_Plan__c)) || 
(ISCHANGED(Status__c) &amp;&amp; ISPICKVAL(Status__c, &apos;Closed&apos;) &amp;&amp; ISBLANK(Resolution_Plan__c)) ||
(ISCHANGED(Resolution_Plan__c) &amp;&amp; ISPICKVAL(Status__c, &apos;Closed&apos;) &amp;&amp; ISBLANK(Resolution_Plan__c))</errorConditionFormula>
    <errorDisplayField>Resolution_Plan__c</errorDisplayField>
    <errorMessage>Resolution Plan is required when status is closed.</errorMessage>
</ValidationRule>